--- a/03-events/style.css
+++ b/03-events/style.css
@@ -1,16 +1,74 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+.container {
+  margin: 0;
+  width: 100%;
+  padding: 2rem 4rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  background-image: linear-gradient(
+    45deg,
+    rgb(203, 210, 212),
+    rgb(139, 201, 226),
+    rgb(175, 184, 181)
+  );
+  text-align: center;
+}
 .actions {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
+  align-items: flex-start;
+  max-width: 30%;
+  width: 20%;
+  height: 40%;
+  padding-left: 2rem;
 }
 
 .btn {
-  padding: .5em 1em;
+  padding: 0.5em 1.3rem;
+  width: auto;
   border-radius: 4px;
   background-color: lightblue;
   text-decoration: none;
-  color:  white;
+  color: white;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.btn:hover {
+  background-color: rgb(62, 60, 180);
+  color: rgb(255, 255, 255);
 }
 
 .active {
-  color: blue;
+  color: rgb(198, 198, 211);
+  background-color: rgb(26, 24, 109);
+}
+
+ul {
+  min-height: 300px;
+}
+
+.random-numbers {
+  display: flex;
+  flex-direction: column;
+  flex-direction: center;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50%;
+  border-right: 0.4px solid rgb(193, 195, 196);
+}
+ul li {
+  list-style: none;
+  font-size: 1.2rem;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgba(21, 21, 80, 0.705);
 }
