--- a/03-events/style.css
+++ b/03-events/style.css
@@ -7,10 +7,10 @@ body {
 .container {
   margin: 0;
   width: 100%;
-  padding: 2rem 4rem;
+  padding: 3rem 4rem;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   height: 100vh;
   background-image: linear-gradient(
     45deg,
@@ -23,16 +23,17 @@ body {
 .actions {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: flex-start;
   max-width: 30%;
   width: 20%;
-  height: 40%;
+  height: 90%;
   padding-left: 2rem;
 }
 
 .btn {
   padding: 0.5em 1.3rem;
+  margin-bottom: 1rem;
   width: auto;
   border-radius: 4px;
   background-color: lightblue;
@@ -60,7 +61,6 @@ ul {
 .random-numbers {
   display: flex;
   flex-direction: column;
-  flex-direction: center;
   justify-content: flex-start;
   align-items: center;
   width: 50%;
@@ -71,4 +71,13 @@ ul li {
   font-size: 1.2rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: rgba(21, 21, 80, 0.705);
+
+  padding: 0.2rem 1.2rem;
+}
+
+ul li:nth-child(odd) {
+  background-color: rgb(202, 196, 196);
+}
+ul li:nth-child(even) {
+  background-color: rgb(130, 130, 219);
 }
